index.css
:root{
    --font-family: sans-serif;
}

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

.container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    margin: auto;
    margin-top: 15px;
    gap: 25px;
    max-width: 1200px;
}

.card{
    max-width: 350px;
    display: flex;
    flex-direction: column;
    border-radius: 12px;
    overflow: hidden;
    background: #fff;
    box-shadow:
        0 8px 20px rgba(236, 72, 153, 0.15),
        0 12px 30px rgba(139, 92, 246, 0.15);
    border: 1px solid darkgray;
    height: 100%; 
}

.card:hover{
    box-shadow: 0 15px 30px rgba(0,0,0,0.18);
}

.card-content{
    display: flex;
    flex: 1;
    padding: 7px;
    flex-direction: column;
    justify-content: center;
}


.card-img{
    width: 100%;
    object-fit: cover;
    height: 200px;
}

.card-btn{
    width: 40%;
    border-radius: 10px;
    text-decoration: none;
    color: white;
    margin-top: auto;
    background-color: deeppink;
    text-align: center;
    margin: 20px auto;
    padding: 3px 3px;
}

